force-app/main/default/objects/Accommodation_Record__c/Accommodation_Record__c.object-meta.xml
<CustomObject>
    <label>Accommodation Record</label>
    <nameField>
        <displayFormat>ACC-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accommodation Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>