force-app/main/default/objects/Accommodation_Record__c/fields/Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Type__c</fullName>
    <label>Accommodation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>