force-app/main/default/objects/Accommodation_Record__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>School</fullName><default>false</default><label>School</label></value>
            <value><fullName>Testing</fullName><default>false</default><label>Testing</label></value>
            <value><fullName>Workplace</fullName><default>false</default><label>Workplace</label></value>
            <value><fullName>Digital</fullName><default>false</default><label>Digital</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>